# University

./: .gitignore  README.md
Boton/: .gitignore  CMakeLists.txt  CreateMap.py  MQTT_client.ipynb  mqtt_client.py
Boton/__gps/: CMakeLists.txt  __gps.c  __gps.h
Boton/examples/hello/: CMakeLists.txt  config.h  main.c
Boton/examples/send_data_gps/: CMakeLists.txt  config.h  main.c
Boton/src/: lorawan.c
Drone/: Drone.ino
Drone/MPU9250/: MPU9250.ino
Drone/NRF24_Receiver/: NRF24_Receiver.ino
Drone/NRF24_Transmiter/: NRF24_Transmiter.ino
Lab_02/html/: _control___m_c_u_8ino.html  dir_0e5d6298faff7205c774c0bb832b4ce2.html  files.html  globals.html  globals_func.html  globals_vars.html  index.html  menudata.js
Lab_02/html/search/: all_1.js  all_5.js  all_6.js  all_7.js  all_9.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js
Lab_03/Telemetría/: CMakeLists.txt  GPS_Browser.py  TCP_Socket.py
Lab_03/Telemetría/Examples/: CMakeLists.txt  main.c
Lab_03/Telemetría/gps/: CMakeLists.txt  gps.c  gps.h
Lab_03/Telemetría/html/: dir_80485104137432d29c28436dcd0cf88c.html  doxygen.css  files.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  gps_8c.html  gps_8c.js  gps_8c_source.html  (+12 more)
Lab_03/doxgyen/: Doxyfile  gps.c  gps.h  main.c  mpu9250.c  mpu9250.h  wifi.c  wifi.h
examples/hello_abp/: main.c
(+90 files in other folders)
